src/test/rustdoc/intra-doc/incompatible-primitive-disambiguator.rs
#![deny(broken_intra_doc_links)]
//! [struct@str::trim] //~ ERROR incompatible link
